fix the issue when the map-container is too small when opening the apartment view for the first time

--- a/Frontend/src/components/SingleApartment/Map.css
+++ b/Frontend/src/components/SingleApartment/Map.css
@@ -1,8 +1,4 @@
 .map {
-    display: flex;
     width: 100%;
     height: 100%;
-    flex-grow: 1;
-    flex-basis: 0;
-    overflow: hidden;
 }
