--- a/Frontend/src/components/SingleApartment/SingleApartment.css
+++ b/Frontend/src/components/SingleApartment/SingleApartment.css
@@ -1,3 +1,5 @@
+/* Styles for screens greater than width of 2000px */
+
 .main-container {
   display: flex;
   flex-direction: column;
@@ -13,32 +15,15 @@
 }
 
 .slider-container {
-  display: flex;
-  flex: 65%;
+  flex: 2 1;
   justify-content: center;  /* Center content horizontally */
   align-items: center;      /* Center content vertically */
   position: relative;       /* Allows the placement of hovering buttons */
 }
 
-.imageContainer {
-  display: flex;
-  width: 100%;
-  height: 100%; /* Set the parent div's height to 100% */
-  justify-content: center;  /* Center content horizontally */
-}
-
-.image {
-  max-width: 100%;
-  max-height: 100%;
-}
-
-.map-container {
-  flex: 35%;
-}
-
 .address-and-owner{
   display: flex;
-  flex: 65%;
+  flex: 2 1;
   flex-direction: row;
   padding: 10px 0px;
   justify-content: space-between;
@@ -58,7 +43,7 @@
 
 .contact-container {
   display: flex;
-  flex: 35%;
+  flex: 1 1;
   padding: 5px;
   justify-content: space-between;
   border: 1px solid rgb(233, 228, 228);
@@ -68,83 +53,63 @@
 .description-container {
   display: flex;
   flex-direction: column;
-  flex: 65%;
+  flex: 2 1;
   padding: 5px;
   justify-content: space-between;
 }
 
-/* Styles for screens with a maximum width of 2000px or smaller */
+/* Specify styles for screens with a maximum width of 2000px or smaller */
 @media screen and (max-width: 2000px) {
   .main-container {
-    display: flex;
-    flex-direction: column;
-    padding: 20px 40px;
     width: 85%;
-    margin: 0 auto; /* Center the container horizontally */
   }
 
   .slider-map-container {
-    display: flex;
-    flex-direction: row;
     height: 525px;
   }
 
   .slider-container {
-    display: flex;
-    flex: 60%;
-    background-color: rgb(245, 245, 250);
-    padding: 5px;
-    justify-content: center;  /* Center content horizontally */
-    align-items: center;      /* Center content vertically */
-  }
-
-  .imageContainer {
-    height: 525px;
-  }
-  
-  .map-container {
-    display: flex;
-    flex-direction: column;
-    flex: 40%;
-    padding: 5px
+    flex: 1.8 1;
   }
 
   .address-and-owner{
-    display: flex;
-    flex: 60%;
-    flex-direction: row;
-    padding: 10px 0px;
-    justify-content: space-between;
+    flex: 1.8 1;
   }
 
   .h1-streetname {
     font-size: 20px;
-    font-weight: 600;
-    align-self: center;
-    padding: 5px;
   }
 
   .p-basic-text {
     font-size: 14px;
-    padding: 5px;
   }
 
   .contact-container{
-    display: flex;
-    flex: 40%;
-    padding: 5px;
-    justify-content: space-between;
-    border: 1px solid rgb(233, 228, 228);
-    border-radius: 30px;
+    flex: 1 1;
   }
 
   .description-container {
-    display: flex;
-    flex-direction: column;
-    flex: 60%;
-    padding: 5px;
-    justify-content: space-between;
+    flex: 1.8 1;
   }
+}
+
+
+/* Styles for all sizes of screens */
+.imageContainer {
+  width: 100%;
+  height: 100%; /* Set the parent div's height to 100% */
+  justify-content: center;  /* Center content horizontally */
+  display: flex;
+}
+
+.image {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.map-container {
+  flex: 1 1;
+  padding: 5px
 }
 
 .contact-details {
